[package]
name = "omnipaxos"
version = "0.2.2"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "A distributed log library written in Rust"
readme = "../README.md"
license = "Apache-2.0"
repository = "https://github.com/haraldng/omnipaxos"
homepage = "https://omnipaxos.com/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
toml = { version = "0.7.3", optional = true }
omnipaxos_macros = { version = "0.1.3", path = "../omnipaxos_macros", optional = true }
rkyv = { version = "0.8" }
tracing = "0.1"

[dev-dependencies]
smol = "2"
async-channel = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
tempfile = "3.3.0"
rand = "0.8.4"
serde_json = "1.0"

[features]
toml_config = ["serde", "toml"]
macros = ["omnipaxos_macros"]
default = ["macros"]

[profile.release]
lto = true
